<resources>
    <string name="app_name">TaskReview</string>
    <string name="title_todo_content">やること</string>
    <string name="title_subject">科目</string>
    <string name="title_priority">優先度</string>
    <string name="title_estimated_time">推定時間(分)</string>
    <string name="title_register">登録</string>
    <string name="title_priority_low">低</string>
    <string name="title_priority_middle">中</string>
    <string name="title_priority_high">高</string>
    <string name="title_deadline">期限</string>
    <string name="title_detail">詳細</string>
    <string name="text_finish">タスク完了</string>
    <string name="text_not_finish">タスク未完了</string>
    <string name="title_evaluation">自己評価</string>
    <string name="title_comment">コメント</string>
    <string name="title_sortSetting">並び順</string>
    <string name="faculty">学部を選択</string>
    <string name="department">学科を選択</string>
    <string name="subject">科目を選択</string>
    <string-array name="sortSettingItems">
        <item>優先度順</item>
        <item>期限順</item>
        <item>科目順</item>
        <item>オート</item>
    </string-array>
</resources>