<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <include
        android:id="@+id/menu"
        layout="@layout/menu_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="820dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/contentTitleView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/title_todo_content"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detailTitleView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/title_detail"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/contentTitleView"
                app:layout_constraintTop_toBottomOf="@+id/contentTitleView" />

            <EditText
                android:id="@+id/toDoEditText"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:inputType="text"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/contentTitleView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/contentTitleView" />

            <EditText
                android:id="@+id/subjectEditText"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/subjectTitleView"
                app:layout_constraintEnd_toEndOf="@+id/toDoEditText"
                app:layout_constraintTop_toTopOf="@+id/subjectTitleView" />

            <TextView
                android:id="@+id/subjectTitleView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/title_subject"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/contentTitleView"
                app:layout_constraintTop_toBottomOf="@+id/detailEditText" />

            <TextView
                android:id="@+id/priorityTitleView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/title_priority"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/contentTitleView"
                app:layout_constraintTop_toBottomOf="@+id/subjectTitleView" />

            <TextView
                android:id="@+id/estimatedTimeTitleView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/title_estimated_time"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/contentTitleView"
                app:layout_constraintTop_toBottomOf="@+id/priorityTitleView" />

            <TextView
                android:id="@+id/deadlineTitleView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/title_deadline"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/contentTitleView"
                app:layout_constraintTop_toBottomOf="@+id/estimatedTimeTitleView" />

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="@+id/estimatedTimeTitleView"
                app:layout_constraintStart_toStartOf="@id/radio_group"
                app:layout_constraintTop_toTopOf="@+id/estimatedTimeTitleView"
                tools:layout_editor_absoluteX="161dp" />

            <EditText
                android:id="@+id/deadlineEditNumber"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="@+id/deadlineTitleView"
                app:layout_constraintStart_toStartOf="@id/radio_group"
                app:layout_constraintTop_toTopOf="@+id/deadlineTitleView" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/title_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/deadlineTitleView" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/subjectEditText"
                app:layout_constraintTop_toBottomOf="@id/subjectEditText">

                <RadioButton
                    android:id="@+id/radio_high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_priority_high" />

                <RadioButton
                    android:id="@+id/radio_middle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_priority_middle" />

                <RadioButton
                    android:id="@+id/radio_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_priority_low" />
            </RadioGroup>

            <EditText
                android:id="@+id/detailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/detailTitleView"
                app:layout_constraintTop_toBottomOf="@+id/detailTitleView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>